# imagetoascii

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
src/image/: image.c
src/imagetoascii/: ascii_converter.py  ascii_converter_builder.py  cli.py  errors.py  main.py
